<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/tilt">


    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/Login"
        android:text="@string/login"
        android:layout_marginTop="40dp"
        android:onClick="Login"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/Orders"
        android:text="@string/orders"
        android:layout_marginTop="20dp"
        android:onClick="Orders"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Contractor"
        android:text="@string/contractor"
        android:onClick="Contractor"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/Info"
        android:text="@string/info"
        android:layout_marginTop="20dp"
        android:onClick="Info"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/Exchange"
        android:onClick="Exchange"
        android:text="@string/exchange"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:id="@+id/Exit"
        android:onClick="Exit"
        android:text="@string/exit"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
